# polish-anime-downloader

./: README.md  dev-requirements.txt  pyproject.toml
src/: pad
src/polish-anime-downloader/: anime_page.html  main.py
src/polish_anime_downloader/: .pyre_configuration  main.py
src/polish_anime_downloader/.mypy_cache/: .gitignore
src/polish_anime_downloader/.pyre/: .gitignore
src/polish_anime_downloader/.pytype/: .gitignore
tests/C/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.old  cmake_install.cmake  polish_anime_downloader.c  polish_anime_downloader.pyx  setup.py
